<resources>
    <string name="app_name">spotAbus</string>
    <string name="Login">Login</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="guest">Be a guest</string>
    <string name="email">Email</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title_hint">Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Favorite stops</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_office">Office</string>
    <string name="menu_superMarket">Super Market</string>

    <string name="scan_busy" description="Button text to indicate that no scan can be started because scanning is already in progress [CHAR_LIMIT=NONE]">Scanning…</string>
    <string name="scan_available" description="Button text to start scanning the current camera image [CHAR_LIMIT=NONE]">Scan</string>
    <string name="clear" description="Button text to clear detected objects from the camera view [CHAR_LIMIT=NONE]">Clear</string>
    <string name="use_cloud_ml" description="Label text displayed on a switch to toggle the Cloud ML model [CHAR_LIMIT=NONE]">Use Cloud ML</string>
</resources>