<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jovita.spotabus.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.jovita.spotabus.ui.office.OfficeFragment"
        android:label="@string/menu_office"
        tools:layout="@layout/fragment_office" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.jovita.spotabus.ui.supermarket.SuperMarketFragment"
        android:label="@string/menu_superMarket"
        tools:layout="@layout/fragment_supermarket" />
</navigation>